Revision history for perl module CPAN::Changes

  - Clean up packaging

  - Return undef for dates or notes that don't exist

  - Quote meta chars to fix a problem that clobbered dates 
    with timezones due to the '+' char (GH #20)

0.30 2014-07-26

  - Fix for subclassing CPAN::Changes::Group (GH #23)

0.29 2014-07-23

  - Groups are now objects (CPAN::Changes::Group). Backwards
    compatibility from hashes should be preserved (GH #22)

0.28 2014-06-10

  - Add "SEE ALSO" links to similar modules (RT #94636)

  - Use perl 5.8-compatible regex

0.27 2013-12-13

  [ Spec Changes ]

  - Bump version to 0.04

  - Allow non-"word" characters between a Version and a Date

0.26 2013-11-21

  - Fix reference issues when adding a release (RT #90605)

0.25 2013-10-08

  - Move Text::Wrap usage to proper module (Michal Spacek)

  - Typo fix (Karen Etheridge)

0.24 2013-10-07

  - Fix Dist::Zilla date parsing. Now puts timezone data in 
    note section (Github #17)

0.23 2013-08-14

  [ Spec Changes ]

  - Bump version to 0.03

  - Allow the "T" marker in W3CDTF to be omitted

  [ Code Changes ]

  - Be more strict about what we consider to be a Dist::Zilla-style date
    to avoid false positive matches

  - Update W3CDTF parsing to make the "T" marker optional (RT #87499)

  - Fix extra whitespace for empty values after version (RT #87524)

0.22 2013-07-30

  - Sync module versions (RT #87455)

0.21 2013-07-30

  [ Spec Changes ]

  - Bump version to 0.02

  - Added "unknown/dev" release date options (RT #67705)

  - Added optional release note (RT #69321)

  - Added another preamble example

  - Added a note about line length

  [ Code Changes ]

  - Require Test::More 0.96 (RT #84994)

  - Added --check and --help flags to tidy_changelog script (Gabor Szabo)

  - Properly parse multi-line preamble

  - Test::CPAN::Changes now warns about parsed dates not in spec-compliant form

  - Handle unknown/dev release dates and release note from new spec

0.20 2013-05-01
