@@ -1,5 +1,10 @@
 Revision history for perl module CPAN::Changes
 
+  - Let long tokens (like URLs) overflow rather than splitting them into
+    multiple likes
+
+  - Don't wrap on non-breaking spaces
+
   - Clean up packaging
 
   - Return undef for dates or notes that don't exist
